apps/media/qbittorrent-vpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-vpn
  namespace: media
  labels:
    app: qbittorrent-vpn
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: qbittorrent-vpn
  template:
    metadata:
      labels:
        app: qbittorrent-vpn
    spec:
      # Ensures DNS lookups go through the VPN.
      # This should prevent DNS leaks.
      # This is only a placeholder and should replaced by gluetun automatically with the correct DNS server.
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.8.0.1 # Placeholder! See above.

      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc        
        - name: media-storage
          persistentVolumeClaim:
            claimName: media
      
      containers:
      # --- VPN SIDECAR CONTAINER (GLUETUN) ---
      - name: gluetun
        image: qmcgaw/gluetun:latest
        imagePullPolicy: IfNotPresent
        
        # Required for changing the network settings for the whole pod (i.e. both containers)
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        
        ports:
          - name: webui
            containerPort: 8080
          - name: torrent-tcp
            containerPort: 6881
            protocol: TCP
          - name: torrent-udp
            containerPort: 6881
            protocol: UDP
      
      # --- APPLICATION CONTAINER (QBITTORRENT) ---
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        imagePullPolicy: IfNotPresent
        
        # Traffic should be routed through gluetun, thus no network stack definition here.
        
        volumeMounts:
          - name: qbittorrent-config
            mountPath: /config
          - name: media-storage
            mountPath: /mnt/media
